# chromecast-tui

./: README.md  main.py  pyproject.toml
src/chromecast_tui/: __main__.py  app.py  cast_manager.py  media_server.py
tests/: test_cast_manager.py  test_media_server.py  test_qr_render.py  test_seek_parser.py
