[project]
name = "chromecast-tui"
version = "0.1.0"
description = "Terminal UI for casting media to Chromecast devices on the local network"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "pychromecast>=14.0.9",
    "qrcode>=8.2",
    "textual>=8.0.0",
]

[project.scripts]
chromecast-tui = "chromecast_tui.__main__:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
